# switcheroo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/switcheroo/aarch64/: decoder.hpp  encoding_tables.hpp  instruction.hpp  instruction_modes_enums.hpp  instruction_type.hpp  opcode_table.hpp  recompiler.hpp
include/switcheroo/x64/: x64_instruction.hpp
src/aarch64/: decoder.cpp  recompiler.cpp
tools/v8_instruction_extraction/: instruction_extractor.py
